fixed menu button bug and hero button bug on mobile

--- a/src/app/(client)/components/nav-menu.module.scss
+++ b/src/app/(client)/components/nav-menu.module.scss
@@ -68,6 +68,9 @@
       filter: brightness(0) invert(1);
     }
   }
+  .buttonHack {
+    width:100%;
+  }
   .crossGroup {
     position: absolute;
     top: 32px;
